// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> should render a vertical form field with a action message 1`] = `
<styled.div>
  <InputLabel
    isRequired={false}
    label="This is a test input"
  />
  Children
  <div>
    This is a test action message
  </div>
</styled.div>
`;

exports[`<Field /> should render a vertical form field with a action message 2`] = `
<styled.div>
  <InputLabel
    isRequired={false}
    label="This is a test input"
  />
  Children
</styled.div>
`;

exports[`<Field /> should render a vertical form field with a description 1`] = `
<styled.div>
  <InputLabel
    isRequired={false}
    label="This is a test input"
  />
  <styled.div>
    This is a test description
  </styled.div>
  Children
</styled.div>
`;

exports[`<Field /> should render a vertical form field with a hint 1`] = `
<styled.div>
  <InputLabel
    isRequired={false}
    label="This is a test input"
  />
  Children
</styled.div>
`;

exports[`<Field /> should render a vertical form field with a single error message 1`] = `
<styled.div>
  <InputLabel
    isRequired={false}
    label="This is a test input"
  />
  Children
  <styled.div>
    Just one error
  </styled.div>
</styled.div>
`;

exports[`<Field /> should render a vertical form field with error messages 1`] = `
<styled.div>
  <InputLabel
    isRequired={false}
    label="This is a test input"
  />
  Children
  <styled.div>
    Error 1
  </styled.div>
  <styled.div
    key="1"
  >
    Error 2
  </styled.div>
</styled.div>
`;

exports[`<Field /> should render a vertical form field with nothing 1`] = `
<styled.div>
  <InputLabel
    isRequired={false}
  />
</styled.div>
`;

exports[`<Field /> should render a vertical form field with regular props 1`] = `
<styled.div>
  <InputLabel
    inputName="testInput"
    isRequired={true}
    label="This is a test input"
  />
  Children
</styled.div>
`;

exports[`<Field /> should render a vertical form field without bottom margin 1`] = `
<styled.div>
  <InputLabel
    inputName="testInput"
    isRequired={false}
    label="This is a test input"
  />
  Children
</styled.div>
`;

exports[`<Field /> should render a vertical form field without label 1`] = `
<styled.div>
  <InputLabel
    inputName="testInput"
    isRequired={false}
  />
  Children
</styled.div>
`;
